--- a/views/users/dashboard.pug
+++ b/views/users/dashboard.pug
@@ -14,7 +14,7 @@ block content
 				.profiles
 					.account-list
 						.header
-							<i class="fa fa-user" aria-hidden="true"> Local</i>
+							i.fa.fa-user.local  Local
 						p 
 							strong id: 
 							| #{user.id}
@@ -35,7 +35,7 @@ block content
 				.profiles
 					.account-list
 						.header
-							<i class="fa fa-user" aria-hidden="true"> Facebook </i>
+							i.fa.fa-facebook.facebook  Facebook
 						p 
 							img(src= user.facebook.pictureUrl)
 							br
@@ -62,7 +62,7 @@ block content
 				.profiles
 					.account-list
 						.header
-							<i class="fa fa-user" aria-hidden="true"> Twitter </i>
+							i.fa.fa-twitter.twitter  Twitter
 						p 
 							img(src= user.twitter.pictureUrl)
 							br
@@ -88,7 +88,7 @@ block content
 				.profiles
 					.account-list
 						.header
-							<i class="fa fa-user" aria-hidden="true"> Google </i>
+							i.fa.fa-google.google  Google
 						p 
 							img(src= user.google.pictureUrl)
 							br
