--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html
 		nav
 			.navbar
 				.brand
-					a(href='/') NightLife
+					a(href='/') Brand
 				.nav-menu
 					if (user)
 						a.menu-item(href='/users/logout') Logout
